[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/characters/player.png" type="Texture" id=1]
[ext_resource path="res://Characters/player.gd" type="Script" id=2]
[ext_resource path="res://assets/characters/anim/player_start_loading_jump.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/anim/jump2.png" type="Texture" id=4]
[ext_resource path="res://assets/characters/anim/hit_ground.png" type="Texture" id=5]
[ext_resource path="res://assets/characters/anim/jump1.png" type="Texture" id=6]
[ext_resource path="res://assets/characters/anim/player_max_loading_jump.png" type="Texture" id=7]
[ext_resource path="res://assets/characters/anim/jump3.png" type="Texture" id=8]
[ext_resource path="res://assets/characters/anim/default2.png" type="Texture" id=9]
[ext_resource path="res://assets/characters/anim/default3.png" type="Texture" id=10]
[ext_resource path="res://assets/characters/anim/default1.png" type="Texture" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 15.7906

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 3.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": false,
"name": "hit_ground",
"speed": 3.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 4 ), ExtResource( 8 ) ],
"loop": true,
"name": "jumping",
"speed": 4.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "loading_jump_max",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "loading_jump_min",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
frame = 1

[node name="PowerOfJumpLoader" type="Timer" parent="."]
wait_time = 0.02
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="PowerOfJumpLoader" to="." method="_on_PowerOfJumpLoader_timeout"]
